--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -50,6 +50,12 @@ body {
     }
   }
 }
+.preloader{
+  padding: 200px 0;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 700;
+}
 
 .cart {
   &__top {
