--- a/src/components/Search/search.module.scss
+++ b/src/components/Search/search.module.scss
@@ -2,14 +2,25 @@
   position: relative;
   display: flex;
   align-items: center;
+  margin: 0 15px;
+  @media (max-width: 600px) {
+    width: 100%;
+    margin: 20px 0;
+  }
 }
 
 .input {
-  width: 400px;
+  width: 30vw;
   padding: 10px 10px 10px 40px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   font-size: 16px;
   border-radius: 10px;
+  @media (max-width: 780px) {
+    width: 40vw;
+  }
+  @media (max-width: 600px) {
+    width: 100%;
+  }
 }
 
 .searchIcon{
