--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -26,6 +26,8 @@ body {
 
   &__items {
     display: grid;
+    place-items: center;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(280px, 300px));
   }
 
