--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @media (max-width: 600px) {
+      display: block;
+    }
   }
 
   &__logo {
@@ -17,9 +20,14 @@
       margin-right: 15px;
     }
 
-    @media (max-width: 624px) {
+    @media (max-width: 780px) {
       div{
         display: none;
+      }
+    }
+    @media (max-width: 600px) {
+      div{
+        display: flex;
       }
     }
 
