--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -35,6 +35,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 20px;
     flex-wrap: wrap;
   }
 }
