--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,16 +4,17 @@
 @import 'components/all';
 
 body {
-  background-color: $background;
+  background-color: #fff;
 }
 
 .wrapper {
-  width: calc(100vw - 100px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100%;
   background-color: #fff;
-  margin: 50px auto;
   border-radius: 10px;
-  max-width: 1400px;
 }
 
 .content {
